# FEModelViewer

./: .claudeignore  .gitignore  AGENTS.md  AppearancePanel.cpp  AppearancePanel.h  CLAUDE.md  CMakeLists.txt  Camera.cpp  Camera.h  ColorBarOverlay.cpp  ColorBarOverlay.h  ControlPanel.cpp  ControlPanel.h  DisplayPanel.cpp  DisplayPanel.h  ExportPanel.cpp  ExportPanel.h  FEAnimationController.cpp  FEAnimationController.h  FEDeformation.cpp  FEDeformation.h  FEElement.h  FEField.cpp  FEField.h  FEGroup.h  FEIsoSurface.cpp  FEIsoSurface.h  FEMeshConverter.cpp  FEMeshConverter.h  FEModel.cpp  FEModel.h  FEModelPanel.cpp  FEModelPanel.h  FENode.h  FEParser.h  FEParser_bdf.cpp  FEParser_inp.cpp  FEParser_op2.cpp  FEParser_op2results.cpp  FEParser_unv.cpp  (+46 more)
.claude/: settings.local.json
cmake/: FERenderConfig.cmake.in  build_installed_example.cmake  check_node_highlight_shader.cmake  check_parse_mode_layering.cmake  check_public_headers.cmake  check_qopenglwidget_framebuffer.cmake  run_parse_missing_file_test.cmake
docs/: Architecture.md  FERender_API.md  OpenGL_Rendering_Guide.md
docs/superpowers/plans/: 2026-05-13-ferender-postprocessing-roadmap.md
examples/: README.md
examples/data/: generate_hex_grid.py  hex_cube.bdf  hex_cube.unv  hex_row.bdf  hex_row.unv
examples/simple_viewer/: CMakeLists.txt  README.md  main.cpp
shaders/: axes.frag  axes.vert  background.frag  background.vert  pick.frag  pick.vert  scene.frag  scene.vert
tests/: test_camera_views.cpp  test_complex_sets.cpp  test_cut_surface_normals.cpp  test_deformation.cpp  test_fe_model_panel.cpp  test_import_path_state.cpp  test_inp_sets.cpp  test_iso_cube_data.cpp  test_label_layout.cpp  test_main_window_linkage.cpp  test_node_vertex_lookup.cpp  test_parts_panel.cpp  test_pivot_interaction.cpp  test_post_filter.cpp  test_post_state.cpp  test_probe.cpp  test_projected_rect_filter.cpp  test_result_mapper.cpp  test_result_panel.cpp  test_result_repository.cpp  test_selection_id_filter.cpp  test_surface_rebuild_options.cpp  test_threshold_row_data.cpp  test_visibility_filter.cpp  test_zoom_policy.cpp
